--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -55,4 +55,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
  # for neovim
   set -g @resurrect-strategy-nvim 'session'
 # Start plugins
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tmp/tpm'
