--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 *
-!~/.config/nvim/lua/user/
-!~/scripts/
-!~/.config/tmux/
-!~/.config/i3/
+!.config/nvim/lua/user/
+!.config/nvim/lua/user/* 
+!scripts/
+!scripts/*
+!.config/tmux/
+!.config/tmux/*
+!.config/i3/
+!.config/i3/*
